# KOSMOS

./: README.md  kosmos_architecture.md  krpc_readme_llm.md  main.py  pyproject.toml  quick_test.py  test_parsing.py  test_throttle.py
checkpoint/events/: Enable_SAS_20251002_203814  Enable_SAS_and_set_throttle_to_01_20251002_203431  Enable_SAS_and_set_throttle_to_01_20251002_203519  Launch_from_Kerbin_to_150km_orbit,_transfer_to_Mun_using_maneuver_nodes,_land_on_Mun,_return_to_Kerb  Launch_to_10km_altitude_20251003_093926  Launch_to_10km_altitude_20251003_094034  Launch_to_15km_altitude._20251003_123014  Launch_to_5km_altitude_20251003_095923  Launch_to_orbit_20251016_165037  Launch_to_orbit_20251016_165052  Launch_to_orbit_20251016_165125  Launch_to_orbit_20251016_165321  Launch_to_orbit_20251016_165336  Launch_to_orbit_20251016_165415  Launch_to_orbit_20251016_165456  Launch_to_orbit_20251016_172444  Launch_to_orbit_20251016_172504  Launch_to_orbit_20251016_172524  Launch_to_orbit_20251016_172543  Launch_to_orbit_20251016_172607  Launch_to_orbit_20251016_172622  Launch_to_orbit_20251016_172932  Launch_to_orbit_20251016_172948  Launch_to_orbit_20251016_173009  Launch_to_orbit_20251016_173032  Launch_to_orbit_20251016_173057  Launch_to_orbit_20251016_173305  Launch_to_orbit_20251016_173327  Launch_to_orbit_20251016_173639  Launch_to_orbit_20251016_173657  Launch_to_orbit_20251016_173945  Launch_to_orbit_20251016_174052  Launch_to_orbit_20251016_174112  Launch_to_orbit_20251016_174127  Launch_to_orbit_20251016_180251  Launch_to_orbit_20251016_182051  Launch_to_orbit_20251029_165720  Launch_to_orbit_and_return_safely_20251016_144750  Launch_to_orbit_and_return_safely_20251016_144814  Launch_to_orbit_and_return_safely_20251016_144854  (+161 more)
examples/: basic_usage.py
kosmos/: __init__.py  kosmos.py
kosmos/agents/: __init__.py  (+4 more)
(+49 files in other folders)
