[project]
name = "kosmos"
version = "0.1.0"
description = "AI Agents controlling Kerbal Space Program."
authors = [
    {name = "Carson Johnson",email = "cjohnson74.tech@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "krpc (>=0.5.4,<0.6.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"