[project]
name = "kosmos"
version = "0.1.0"
description = "AI Agents controlling Kerbal Space Program."
authors = [
    {name = "Carson Johnson",email = "cjohnson74.tech@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "krpc (>=0.5.4,<0.6.0)",
    "crewai (>=0.165.1,<0.166.0)",
    "openai (==1.99.0)",
    "anthropic (>=0.64.0,<0.65.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"