[project]
name = "kosmos"
version = "0.1.0"
description = "AI Agents controlling Kerbal Space Program."
authors = [
    {name = "Carson Johnson",email = "cjohnson74.tech@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "krpc (>=0.5.4,<0.6.0)",
    "crewai (>=0.186.1,<0.187.0)",
    "openai (>=1.104.2,<2.0.0)",
    "anthropic (>=0.64.0,<0.65.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langchain-anthropic (>=0.2.0,<0.3.0)",
    "gymnasium (>=1.2.1,<2.0.0)",
    "langchain-chroma (>=0.2.6,<0.3.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"